Profile and CV added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="h-100">
     <head>
-        <title>Home | Chris Bryan</title>
+        <title>Home | Rahim Hossain</title>
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <link rel="stylesheet" href="/assets/styles/font-awesome-4.7.0/css/font-awesome.css">
@@ -98,7 +98,7 @@
             <ul>
                 <li><a href="/research/" class="link-danger">For researchers and businesses interested in collaborating, see the Research page.</a></li>
                 <li><a href="/policies/" class="link-danger">Are you a student interested in Vis research? Read the Lab Policies page first!</a></li>
-                <li><a href="/assets/cv/chris-bryan-june-2023.pdf" target="_blank" class="link-danger">CV</a> (last updated June 2023)</li>
+                <li><a href="/assets/cv/Rahim_CV.pdf" target="_blank" class="link-danger">CV</a> (last updated June 2023)</li>
             </ul>
 
             <h2>About</h2>
