--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 
                 <div class="col-md-10 col-sm-9 col-xs-6 mt-2 pt-3">
                     <!-- <hr> -->
-                    <h1>Chris Bryan</h1>
+                    <h1>Rahim Hossain</h1>
                     <p class="lead">
-                        Assistant Professor in Computer Science<br>
-                        School of Computing and Augmented Intelligence<br>
-                        Arizona State University<br>
-                        Head of the Sonoran Visualization Laboratory (SVL @ ASU)
+                        Masters in Computer Science<br>
+                        Thomas J. Watson College of Engineering and Applied Science<br>
+                        Binghamton University (SUNY)<br>
+                        Research Assistant at RTLab
                     </p>
                     
                 </div>
