--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <ul>
                 <li><a href="/research/" class="link-danger">For researchers and businesses interested in collaborating, see the Research page.</a></li>
                 <li><a href="/policies/" class="link-danger">Are you a student interested in Vis research? Read the Lab Policies page first!</a></li>
-                <li><a href="/assets/cv/Rahim_CV.pdf" target="_blank" class="link-danger">CV</a> (last updated June 2023)</li>
+                <li><a href="assets/cv/Rahim_CV.pdf" target="_blank" class="link-danger">CV</a> (last updated June 2023)</li>
             </ul>
 
             <h2>About</h2>
