Skeleton of the website ready

--- a/research/index.html
+++ b/research/index.html
@@ -37,30 +37,36 @@
                             Research
                         </a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link mx-2" href="/students/">
                             <i class="bi-person-square"></i>
                             Students
                         </a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                         <a class="nav-link mx-2" href="/publications/">
                             <i class="bi-stack"></i>
                             Publications
                         </a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link mx-2" href="/teaching/">
                             <i class="fa fa-mortar-board" aria-hidden="true"></i>
                             Teaching
                         </a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
+                        <a class="nav-link mx-2" href="/CV/">
+                            <i class="bi bi-file-earmark" aria-hidden="true"></i>
+                            CV
+                        </a>
+                      </li>
+                      <!-- <li class="nav-item">
                         <a class="nav-link mx-2" href="/service/">
                             <i class="bi-upc-scan"></i>
                             Service
                         </a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                         <a class="nav-link mx-2" href="mailto:cbryan16@asu.edu">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
