--- a/CV/index.html
+++ b/CV/index.html
@@ -50,12 +50,12 @@
                             Publications
                         </a>
                       </li>
-                      <li class="nav-item">
+                      <!-- <li class="nav-item">
                         <a class="nav-link mx-2" href="/teaching/">
                             <i class="fa fa-mortar-board" aria-hidden="true"></i>
                             Teaching
                         </a>
-                      </li>
+                      </li> -->
                       <li class="nav-item">
                         <a class="nav-link mx-2" href="/CV/">
                             <i class="bi bi-file-earmark" aria-hidden="true"></i>
