--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <p class="lead">
                         Masters in Computer Science<br>
                         Binghamton University (SUNY)<br>
-                        Research Assistant at RTLab
+                        Research Assistant at RTLab<br>
                         Binghamton , NY , 13902
 
                         <table>
