--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     <span style="margin-right: 20px;"></span>
                                 </td>
                                 <td>
-                                    <a href="https://github.com/ramsRahim" target="_blank"></a>
+                                    <a href="https://github.com/ramsRahim" target="_blank">
                                     <i class="fab fa-github" style="font-size: 32px; color:rgb(58, 57, 57);"></i>
                                     </a>
                                     <span style="margin-right: 20px;"></span>
