--- a/publications/index.html
+++ b/publications/index.html
@@ -69,7 +69,7 @@
                         </a>
                       </li> -->
                       <li class="nav-item">
-                        <a class="nav-link mx-2" href="mailto:cbryan16@asu.edu">
+                        <a class="nav-link mx-2" href="mailto:rhossain@binghamton.edu">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             Contact
                         </a>
