--- a/research/index.html
+++ b/research/index.html
@@ -19,7 +19,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light border border-bottom">
                 <div class="container" style="max-width:1000px;">
-                  <a class="navbar-brand link-dark" href="/">Chris Bryan</a>
+                  <a class="navbar-brand link-dark" href="/">Rahim Hossain</a>
                   <button class="navbar-toggler toggler-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -68,7 +68,7 @@
                         </a>
                       </li> -->
                       <li class="nav-item">
-                        <a class="nav-link mx-2" href="mailto:cbryan16@asu.edu">
+                        <a class="nav-link mx-2" href="mailto:rhossain@binghamton.edu">
                             <i class="fa fa-envelope" aria-hidden="true"></i>
                             Contact
                         </a>
