--- a/publications/index.html
+++ b/publications/index.html
@@ -2,7 +2,7 @@
 <html class="h-100">
     <head>
         <title>Home | Rahim Hossain</title>
-        <link rel="icon" type="image/icon" href="assets/img_misc/logo.png">
+        <link rel="icon" type="image/icon" href="../assets/img_misc/logo.png">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <link rel="stylesheet" href="/assets/styles/font-awesome-4.7.0/css/font-awesome.css">
@@ -20,7 +20,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light bg-light border border-bottom">
                 <div class="container" style="max-width:1000px;">
-                  <a class="navbar-brand link-dark" href="/">Chris Bryan</a>
+                  <a class="navbar-brand link-dark" href="/">Rahim Hossain</a>
                   <button class="navbar-toggler toggler-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
