--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
             <p>
                 My research interests include enhancing security within machine learning frameworks and advancing unsupervised learning techniques. I have been recognized through scholarly publications and have led impactful projects like 'Third Eye' for assistive technology and smart systems for autonomous vehicles. Proficient in various programming languages and ML libraries, my expertise was honored with a podium placement in the Ebay ML Challenge and a scholarship for technical merit.
             </p>
+
+            <p>
+                My academic roots trace back to Bangladesh University of Engineering and Technology, where I honed my foundation in engineering, leading to advanced research in computing.
+            </p>
+
+            <p>
+                When not immersed in algorithms, you'll find me hiking trails, playing soccer, or savoring the thrill of a good game - activities that sharpen my focus and fuel my passion for innovation.
+            </p>
             <!-- <h5>External links</h5> 
             <ul>
                 <li><a href='https://isearch.asu.edu/profile/3335256' class='link-danger' target='_blank'>iSearch</a> (my ASU directory profile)</li>
