--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
             </p>
 
             <p>
+                After graduating, I embarked on a journey with <a href="https://www.cobaltspeech.com/" target="_blank" class="link-danger"> Cobalt Speech and Language</a>, a USA based company , as a Research Scientist, primarily focusing on Natural Language Processing (NLP) and Understanding (NLU) tasks. I played a key role in one of the ambitious projects of my company called “Call Summarization” , training large language models like <b> BART, BERT, and LED </b>, thereby gaining extensive experience with transformer models.
+            </p>
+
+            <p>
                 When not immersed in algorithms, you'll find me hiking trails, playing soccer, or savoring the thrill of a good game - activities that sharpen my focus and fuel my passion for innovation.
             </p>
             <!-- <h5>External links</h5> 
