Reseach profile updated

--- a/research/index.html
+++ b/research/index.html
@@ -82,71 +82,55 @@
         <main class="flex-shrink-1 mb-5">
             <div class="container pt-4" style="max-width:1000px;">
                 <h1>Research</h1>
-                <p>At Arizona State University, I lead the Sonoran Visualization Laboratory (SVL). The SVL researches data visualization, human-computer interaction, augmented/virtual reality, and data science. In our group, we develop novel designs, algorithms, statistical models, and techniques to support analysis and decision making for complex data. We regularly collaborate with experts across a range of domains, including medical physicians, sociologists, power systems engineers, genomocists, security experts, and more. Current research projects are sponsored by ASU, Phoenix Children’s Hospital, and NSF.</p>
+                <p>My academic journey at Binghamton University has been a transformative exploration in deep learning
+                    and IoT, aligning perfectly with the innovative spirit of the Georgia Tech Robotics program in the College of
+                    Computing. As I delved into this rapidly progressing field, I identified a burgeoning challenge: the increasing
+                    security risks inherent in deep learning technologies. This realization spurred me to investigate these vul-
+                    nerabilities, leading to a collaborative research effort. Our findings were encapsulated in the paper “Secure
+                    Source Free Domain Adaptation,” which I had the honor of co-authoring. This paper was subsequently
+                    presented at the International Conference on Computer Vision (ICCV), a highly respected conference in our
+                    field.</p>
 
-                <p>Several of our current research topics and areas of interest are listed below, though we also work broadly in visualization and machine learning spaces. If you are interested in becoming a collaboratior with the SVL to better understand your data or increase productivity, feel free to <a href="mailto:cbryan16@asu.edu" class="link-danger">email</a> and we can schedule a meeting to discuss further.</p>
+                <p>In addition to this research, my Master’s thesis is centered around the development of real-time data
+                    analytics, where I am incorporating Adaptive Real Time Object Detection using advance optical flow algorithm. Alongside these endeavors, I took the opportu-
+                    nity to further refine my smart stick project, initially developed during my undergraduate studies. For the
+                    Introduction to IoT course, I evolved the project, now named "Third Eye," by integrating continuous con-
+                    nectivity using LoRa technology.</p>
 
                 <hr>
                 <div class='row'>
                     <div class='col-12 mt-4'>
-                        <h3>Exploratory Visual Analytics for Complex Data</h3>
+                        <h3>Adaptive Real Time Object Detection using advance optical flow algorithm</h3>
                     </div>
                     <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/mishra2022news.png" data-holder-rendered="true">
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/traffic.jpg" data-holder-rendered="true">
                     </div>
                     <div class='col-8'>
-                        We develop advanced interfaces and visualization techniques to enable new ways to explore complex, high-dimensional, and heterogeneous data. Such data normally cannot be easily handled, accessed, or analyzed using current techniques and tools; we develops software stacks and user experiences that let humans analyze and reason about this data, such as lettting them more deeploy derive insights, support decision-making, and even communicate or tell stories using the data.
+                        We are developing a real-time object detection system that can adapt to changes in the environment. We are using optical flow to detect changes in the environment, and then using this information to adapt the object detection model to the new environment.
+                    </div>
+                    <div class='col-12 mt-4'>
+                        <h3>Investigating Linear Neural Network’s Vulnerability</h3>
+                    </div>
+                    <div class='col-4'>
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/neural_networks_comparison.png" data-holder-rendered="true">
+                    </div>
+                    <div class='col-8'>
+                        In this research, the primary objective is to investigate the effect of elimination of non linear activation in the
+                        DNN in terms of robustness. We have shown that the linear neural network is vulnerable to adversarial attacks.
                     </div>
 
                     <div class='col-12 mt-4'>
-                        <h3>Collaborative Visualization</h3>
+                        <h3>Security Threat in Source Free Domain Adaptation</h3>
                     </div>
                     <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_misc/collaborative.jpg" data-holder-rendered="true">
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/triggerless-backdoor-1.webp" data-holder-rendered="true">
                     </div>
                     <div class='col-8'>
-                        As data scales in size and complexity, it becomes difficult for a single person to fully analyze or comprehend. We develop novel tools to support collaborative visual analysis and sensemaking, including scenarios where multiple users are working together at the same time (synchronous collaboration), where multiple users independently contribute insights to a problem (crowdsourcing), and instances where users complete a set of analysis and then hand off their findings to a user who continues the process (handoff analysis).
+                        We investigated the effect of a source adversary which may inject a hidden malicious behavior
+                        (Backdoor/Trojan) during source training and potentially transfer it to the target domain even after benign
+                        training by the victim (target do-main owner). We also built a defense method for the attack as well.
                     </div>
 
-                    <div class='col-12 mt-4'>
-                        <h3>Immersive Visualization</h3>
-                    </div>
-                    <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/navigable_videos.png" data-holder-rendered="true">
-                    </div>
-                    <div class='col-8'>
-                        As the technologies for virtual and augmented reality improve, we can exploit such immersive spaces for visualizing and analyzing data. We are developing novel applications and techniques for displaying and analyzing 3D scientific and medical data, and are studying how immersive modalities affect the ways that users interact with such data, and also how they affect collaboration between multiple people. We own several HTC Vive and Microsoft HoloLens 2 devices, allowing us to conduct flexible and robust studies on state-of-the-art hardware.
-                    </div>
-
-                    <div class='col-12 mt-4'>
-                        <h3>Privacy-Preserving Visualization</h3>
-                    </div>
-                    <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/wang2020umbra.png" data-holder-rendered="true">
-                    </div>
-                    <div class='col-8'>
-                        Disclosure of sensitive information is an increasing problem in today's society. We build visual interfaces to help analysts understand how datasets can leak information, and how such data can be sanitized to preserve the privacy of users with minimum overall data loss.
-                    </div>
-
-                    <div class='col-12 mt-4'>
-                        <h3>Interfaces for Explainable AI and Human-in-the-Loop ML</h3>
-                    </div>
-                    <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/mishra2022why.png" data-holder-rendered="true">
-                    </div>
-                    <div class='col-8'>
-                        We develop interactive visualizations and user interfaces as a way to help understand the behavior of machine learning models. One way to do this is by "opening the black box" to promote trust and interpretability by understanding the inner workings of the model. Conversely, we also develop techniques and tools that support "non-expert" users, who do not necessarily have a background or expertise in AI/ML development. We also study bias and spurious correlations that can exist in datasets that are used to train machine learning models. Conversely, machine learning can be use to help guide the visualization and analysis process, such as selecting appropriate visualizations to show a user during exploration.
-                    </div>
-
-                    <div class='col-12 mt-4'>
-                        <h3>Visual Perception and Cognition</h3>
-                    </div>
-                    <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/arunkumar2021bayesian.png" data-holder-rendered="true">
-                    </div>
-                    <div class='col-8'>
-                        We study the low-level cognitive and attentional processes that enable vision and perception, in the context of visualizing data. We run eye tracking studies using a Tobii X2-60, and conduct large-scale crowdsourced user studies to analyze visualizations.
-                    </div>
             </div>
         </main>
 
