Reseach profile updated slightly

--- a/research/index.html
+++ b/research/index.html
@@ -130,6 +130,16 @@
                         (Backdoor/Trojan) during source training and potentially transfer it to the target domain even after benign
                         training by the victim (target do-main owner). We also built a defense method for the attack as well.
                     </div>
+                    <div class='col-12 mt-4'>
+                        <h3>Weight Pruning</h3>
+                    </div>
+                    <div class='col-4'>
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/prunning.png" data-holder-rendered="true">
+                    </div>
+                    <div class='col-8'>
+                        We investigated the effect of weight pruning in unsupervised learning setup. We also proposed a weight
+                        perturbation method. We showed that the weight pruning is very effective in unsupervised learning setup.
+                    </div>
 
             </div>
         </main>
