--- a/research/index.html
+++ b/research/index.html
@@ -140,6 +140,17 @@
                         We investigated the effect of weight pruning in unsupervised learning setup. We also proposed a weight
                         perturbation method. We showed that the weight pruning is very effective in unsupervised learning setup.
                     </div>
+                    <div class='col-12 mt-4'>
+                        <h3>Local features detection using 3D point cloud</h3>
+                    </div>
+                    <div class='col-4'>
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/3D-point-cloud-of-the-face.png" data-holder-rendered="true">
+                    </div>
+                    <div class='col-8'>
+                        We built a pipeline to detect local features using 3D point cloud. The pipeline consists of Kmeans clustering
+                        algorithm to first segment the point cloud and then we used the Gaussian Mixture Model to get the local features.
+                        We then ran the pipeline on the 3D point cloud of the face and got the local features.
+                    </div>
 
             </div>
         </main>
