--- a/publications/index.html
+++ b/publications/index.html
@@ -91,14 +91,15 @@
                 <div class="row">
 
                     <div class="col-2 my-2">
-                        <img class="border rounded shadow img-fluid" src="/assets/img_papers/arunkumar2023image.png" data-holder-rendered="true">
+                        <img class="border rounded shadow img-fluid" src="/assets/img_papers/paper1.png" data-holder-rendered="true">
                     </div>
                     <div class="col-10 my-2">
-                        Anjana Arunkumar, Lace Padilla, Gi-Yeul Bae, and Chris Bryan. 
-                        <b>Image or Information? Examining the Nature and Impact of Visualization Perceptual Classification.</b>
-                        <i>accepted to IEEE VIS 2023.</i> <br/>
-                        <a href="https://arxiv.org/abs/2307.10571" class="link-danger" target="_blank">Preprint</a> |
-                        <a href="https://github.com/aarunku5/Image-or-Information-Vis-2023" class="link-danger" target="_blank">Supplementary Materials</a>
+                        Sabbir Ahmed, Abdullah Al Arafat, Mamshad Nayeem Rizve, <b>Rahim Hossain</b>, Zhishan Guo, Adnan Siraj
+                        Rakin 
+                        <b>SSDA: Secure Source-Free Domain Adaptation.</b>
+                        <i>accepted to ICCV 2023.</i> <br/>
+                        <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Ahmed_SSDA_Secure_Source-Free_Domain_Adaptation_ICCV_2023_paper.html" class="link-danger" target="_blank">Paper</a> |
+                        <a href="https://github.com/aarunku5/Image-or-Information-Vis-2023" class="link-danger" target="_blank">Code</a>
                     </div>
 
                     <div class="col-2 my-2">
