--- a/publications/index.html
+++ b/publications/index.html
@@ -97,7 +97,7 @@
                         Sabbir Ahmed, Abdullah Al Arafat, Mamshad Nayeem Rizve, <b>Rahim Hossain</b>, Zhishan Guo, Adnan Siraj
                         Rakin 
                         <b>SSDA: Secure Source-Free Domain Adaptation.</b>
-                        <i>International Conference on Computer Vision (ICCV) 2023</i> <br/>
+                        <i>International Conference on Computer Vision (ICCV) 2023.</i> <br/>
                         <a href="https://openaccess.thecvf.com/content/ICCV2023/html/Ahmed_SSDA_Secure_Source-Free_Domain_Adaptation_ICCV_2023_paper.html" class="link-danger" target="_blank">DOI</a> |
                         <!-- <a href="https://github.com/aarunku5/Image-or-Information-Vis-2023" class="link-danger" target="_blank">Code</a> -->
                     </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="col-10 my-2">
                         <b>Rahim Hossain</b>, Manar D. Samad 
-                        <b>A hybrid clustering pipeline for mining baseline local patterns in 3d point cloud</b>
+                        <b>A hybrid clustering pipeline for mining baseline local patterns in 3d point cloud.</b>
                         <i>International Conference for Convergence of Technology (I2CT) 2021.</i> <br/>
                         <a href="https://ieeexplore.ieee.org/abstract/document/9418095" class="link-danger" target="_blank">DOI</a>
                         <a href="https://github.com/ramsRahim/3DPointCloud" class="link-danger" target="_blank">Code</a> | 
