Research Page updated

--- a/research/index.html
+++ b/research/index.html
@@ -83,10 +83,9 @@
             <div class="container pt-4" style="max-width:1000px;">
                 <h1>Research</h1>
                 <p>My academic journey at Binghamton University has been a transformative exploration in deep learning
-                    and IoT, aligning perfectly with the innovative spirit of the Georgia Tech Robotics program in the College of
-                    Computing. As I delved into this rapidly progressing field, I identified a burgeoning challenge: the increasing
-                    security risks inherent in deep learning technologies. This realization spurred me to investigate these vul-
-                    nerabilities, leading to a collaborative research effort. Our findings were encapsulated in the paper “Secure
+                    and IoT. As I delved into this rapidly progressing field, I identified a burgeoning challenge: the increasing
+                    security risks inherent in deep learning technologies. This realization spurred me to investigate these vulnerabilities,
+                    leading to a collaborative research effort. Our findings were encapsulated in the paper “Secure
                     Source Free Domain Adaptation,” which I had the honor of co-authoring. This paper was subsequently
                     presented at the International Conference on Computer Vision (ICCV), a highly respected conference in our
                     field.</p>
