--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <!-- <hr> -->
                     <h1>Rahim Hossain</h1>
                     <p class="lead">
-                        Masters Student in Computer Science<br>
+                        PhD in School of Computing<br>
                         Binghamton University (SUNY)<br>
                         Research Assistant at RTLab<br>
                         Binghamton , NY , 13902
