--- a/research/index.html
+++ b/research/index.html
@@ -91,13 +91,34 @@
                     field.</p>
 
                 <p>In addition to this research, my Master’s thesis is centered around the development of real-time data
-                    analytics, where I am incorporating Adaptive Real Time Object Detection using advance optical flow algorithm. Alongside these endeavors, I took the opportu-
-                    nity to further refine my smart stick project, initially developed during my undergraduate studies. For the
+                    analytics, where I have incorporated Real Time Object Detection using raspberry pi. The system is being used to detect spotted lantern fly in the wild.
+                    Alongside these endeavors, I took the opportunity to further refine my smart stick project, initially developed during my undergraduate studies. For the
                     Introduction to IoT course, I evolved the project, now named "Third Eye," by integrating continuous con-
                     nectivity using LoRa technology.</p>
 
                 <hr>
                 <div class='row'>
+                    <div class='col-12 mt-4'>
+                        <h3>A DNN for Detecting Spotted Lanternflies Using Energy Efficient WAN</h3>
+                    </div>
+                    <div class='col-4'>
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/SLF.pdf" data-holder-rendered="true">
+                    </div>
+                    <div class='col-8'>
+                        Agri-Tech integrates technology with agriculture to address real-world challenges,
+                        prominently through the Internet of Things (IoT). Detecting invasive species like
+                        the Spotted Lanternfly (SLF) in remote and hard-to-reach places such as tree
+                        branches or tall building walls is labor-intensive and leads to significant crop
+                        losses. To tackle this, we developed a new system, a Deep Neural Network (DNN)
+                        architecture that incorporates MobileNet V3, optimized for low-power devices and
+                        trained on a dedicated SLF dataset. Deployed on a Raspberry Pi Model B with a
+                        LoRa module, our system is energy-efficient and operates effectively on edge devices
+                        with limited computational resources through quantization, achieving high accuracy
+                        and low latency for detection. Our results demonstrate that our system covers a
+                        larger area and consumes significantly less power than other network technologies
+                        such as WiFi and Bluetooth, making it a superior solution for managing invasive
+                        species in expansive, resource-limited environments
+                    </div>
                     <div class='col-12 mt-4'>
                         <h3>Adaptive Real Time Object Detection using advance optical flow algorithm</h3>
                     </div>
