research updated image

--- a/research/index.html
+++ b/research/index.html
@@ -102,7 +102,7 @@
                         <h3>A DNN for Detecting Spotted Lanternflies Using Energy Efficient WAN</h3>
                     </div>
                     <div class='col-4'>
-                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/SLF.pdf" data-holder-rendered="true">
+                        <img class="rounded shadow img-fluid border" src="/assets/img_papers/SLF.png" data-holder-rendered="true">
                     </div>
                     <div class='col-8'>
                         Agri-Tech integrates technology with agriculture to address real-world challenges,
