research page updated

--- a/research/index.html
+++ b/research/index.html
@@ -93,8 +93,7 @@
                 <p>In addition to this research, my Master’s thesis is centered around the development of real-time data
                     analytics, where I have incorporated Real Time Object Detection using raspberry pi. The system is being used to detect spotted lantern fly in the wild.
                     Alongside these endeavors, I took the opportunity to further refine my smart stick project, initially developed during my undergraduate studies. For the
-                    Introduction to IoT course, I evolved the project, now named "Third Eye," by integrating continuous con-
-                    nectivity using LoRa technology.</p>
+                    Introduction to IoT course, I evolved the project, now named "Third Eye," by integrating continuous connectivity using LoRa technology.</p>
 
                 <hr>
                 <div class='row'>
