--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             <h2>About</h2>
 
             <p>
-                I am a Masters Student in the Thomas J. Watson College of Engineering and Applied Science at Binghamton University ( SUNY ), which is located in the New York at Binghamton. I am working as a Research Assistant ( RA ) at Real-Time Embedded Systems Laboratory ( RTlab ) which is supervised by the professor <a href="//www.cs.binghamton.edu/~kang/" target="_blank" class="link-danger"> Kyoung-Don Kang. </a>
+                I am a PhD Student in the Thomas J. Watson College of Engineering and Applied Science at Binghamton University ( SUNY ), which is located in the New York at Binghamton. I am working as a Research Assistant ( RA ) at Real-Time Embedded Systems Laboratory ( RTlab ) which is supervised by the professor <a href="//www.cs.binghamton.edu/~kang/" target="_blank" class="link-danger"> Kyoung-Don Kang. </a>
             </p>
 
             <p>
