--- a/research/index.html
+++ b/research/index.html
@@ -104,9 +104,7 @@
                         <img class="rounded shadow img-fluid border" src="/assets/img_papers/SLF.png" data-holder-rendered="true">
                     </div>
                     <div class='col-8'>
-                        Agri-Tech integrates technology with agriculture to address real-world challenges,
-                        prominently through the Internet of Things (IoT). Detecting invasive species like
-                        the Spotted Lanternfly (SLF) in remote and hard-to-reach places such as tree
+                        Detecting invasive species like the Spotted Lanternfly (SLF) in remote and hard-to-reach places such as tree
                         branches or tall building walls is labor-intensive and leads to significant crop
                         losses. To tackle this, we developed a new system, a Deep Neural Network (DNN)
                         architecture that incorporates MobileNet V3, optimized for low-power devices and
