--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@
             <hr>
             <h2>Recent News</h2>
             <div class="mb-5">
+                <h5>August 2024</h5>
+                <p class="mx-2">Started my PhD in <b>Binghamton University (SUNY)</b> at <b>school of computing</b> under the supervision of <b>Prof. Kyoung-Don Kang</b>.
+                <h5>May 2024</h5>
+                <p class="mx-2"> Defended my Master's thesis titled <b>"A DNN for Detecting Spotted Lanternflies Using Energy Efficient WAN"</b> at <b>Binghamton University (SUNY)</b>.
 
                 <h5>August 2023</h5>
                 <p class="mx-2">Our paper accepted in <b>ICCV 2023</b> titled <b>"SSDA: Secure Source-Free Domain Adaptation"</b>.
