New Paper added

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
             <hr>
             <h2>Recent News</h2>
             <div class="mb-5">
+                <h5>June 2025</h5>
+                <p class="mx-2">Our paper accepted in <b>Sensors</b> titled <b>"TDA-L: Reducing Latency and Memory Consumption of Test-Time Adaptation for Real-Time Intelligent Sensing"</b>.
                 <h5>August 2024</h5>
                 <p class="mx-2">Started my PhD in <b>Binghamton University (SUNY)</b> at <b>school of computing</b> under the supervision of <b>Prof. Kyoung-Don Kang</b>.
                 <h5>May 2024</h5>
