--- a/publications/index.html
+++ b/publications/index.html
@@ -89,6 +89,16 @@
                 <h3 class="mt-4">Full Papers (Journal, Conference, and Symposium)</h3>
 
                 <div class="row">
+                    <div class="col-2 my-2">
+                        <img class="border rounded shadow img-fluid" src="/assets/img_papers/tda-l(v4).drawio.png" data-holder-rendered="true">
+                    </div>
+                    <div class="col-10 my-2">
+                        <b>Rahim Hossain</b>, Md Tawheedul Islam Bhuian, Kyoung-Don Kang
+                        <b>TDA-L: Reducing Latency and Memory Consumption of Test-Time Adaptation for Real-Time Intelligent Sensing</b>
+                        <i>Sensors.</i> <br/>
+                        <a href="https://doi.org/10.3390/s25123574" class="link-danger" target="_blank">DOI</a> |
+                        <!-- <a href="https://github.com/aarunku5/Image-or-Information-Vis-2023" class="link-danger" target="_blank">Code</a> -->
+                    </div>
 
                     <div class="col-2 my-2">
                         <img class="border rounded shadow img-fluid" src="/assets/img_papers/paper1.png" data-holder-rendered="true">
